Refactor: Replace Retrofit and OkHttp with Spring Web `RestClient`
- Transitioned from OkHttp and Retrofit to Spring Web's RestClient for HTTP communication.
- Refactored serialization/deserialization to use `tools.jackson` modules (Jackson 3)
- Bumped Java version to 21